task1/service.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: roza
  labels: 
    app: nginx
spec:
  containers:
    - name: nginx
      image: user889090/roza-todo:ls
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  namespace: roza
  labels: 
    app: apache
spec:
  containers:
    - name: apache
      image: httpd:latest
---
apiVersion: v1
kind: Service
metadata:
  name: service1-roza
  namespace: roza
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service2-roza
  namespace: roza
spec:
  selector:
    app: apache
  ports:
    - name: ssh
      port: 80
      targetPort: 80
