task1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roza-ingress
  namespace: roza
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"
    external-dns.alpha.kubernetes.io/hostname: rooz.example.ml
spec:
  tls:
  - hosts:
    - roza.example.com
    secretName: my-tls
  rules:
    - http:
        paths:
          - path: /rooz
            pathType: Prefix
            backend:
              service:
                name: service1-roza
                port:
                  number: 80
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: service2-roza
                port:
                  number: 80
      host: rooz.example.ml
